deploy/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/aka-somix/micro-url-shortener:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: url-shortener
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
